// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LessonPlannerPage at 360px — Task #281 viewport fingerprint fingerprint @ 360px is stable 1`] = `
Object {
  "breakpoint_classes": Object {
    "md:col-span-2": 1,
    "md:grid-cols-2": 1,
    "md:text-sm": 4,
    "sm:p-6": 1,
    "sm:text-2xl": 1,
  },
  "element_count": 82,
  "inner_width": 360,
  "matched_breakpoints": Object {
    "2xl": false,
    "lg": false,
    "md": false,
    "sm": false,
    "xl": false,
  },
  "root_class": "flex min-h-screen bg-gray-50",
  "root_tag": "div",
  "width": 360,
}
`;

exports[`LessonPlannerPage at 414px — Task #281 viewport fingerprint fingerprint @ 414px is stable 1`] = `
Object {
  "breakpoint_classes": Object {
    "md:col-span-2": 1,
    "md:grid-cols-2": 1,
    "md:text-sm": 4,
    "sm:p-6": 1,
    "sm:text-2xl": 1,
  },
  "element_count": 82,
  "inner_width": 414,
  "matched_breakpoints": Object {
    "2xl": false,
    "lg": false,
    "md": false,
    "sm": false,
    "xl": false,
  },
  "root_class": "flex min-h-screen bg-gray-50",
  "root_tag": "div",
  "width": 414,
}
`;

exports[`LessonPlannerPage at 768px — Task #281 viewport fingerprint fingerprint @ 768px is stable 1`] = `
Object {
  "breakpoint_classes": Object {
    "md:col-span-2": 1,
    "md:grid-cols-2": 1,
    "md:text-sm": 4,
    "sm:p-6": 1,
    "sm:text-2xl": 1,
  },
  "element_count": 82,
  "inner_width": 768,
  "matched_breakpoints": Object {
    "2xl": false,
    "lg": false,
    "md": true,
    "sm": true,
    "xl": false,
  },
  "root_class": "flex min-h-screen bg-gray-50",
  "root_tag": "div",
  "width": 768,
}
`;

exports[`LessonPlannerPage at 1024px — Task #281 viewport fingerprint fingerprint @ 1024px is stable 1`] = `
Object {
  "breakpoint_classes": Object {
    "md:col-span-2": 1,
    "md:grid-cols-2": 1,
    "md:text-sm": 4,
    "sm:p-6": 1,
    "sm:text-2xl": 1,
  },
  "element_count": 82,
  "inner_width": 1024,
  "matched_breakpoints": Object {
    "2xl": false,
    "lg": true,
    "md": true,
    "sm": true,
    "xl": false,
  },
  "root_class": "flex min-h-screen bg-gray-50",
  "root_tag": "div",
  "width": 1024,
}
`;
